src/objects/eTSP_Certification__c.object
<CustomObject>
    <description>Ticket Service Provider test progresses</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>eTSP Certifications</relationshipLabel>
        <relationshipName>eTSP_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airline_Sign_off__c</fullName>
        <label>Airline Sign off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Process_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certification Process Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>eTSP Certifications</relationshipLabel>
        <relationshipName>eTSPCertifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_status__c</fullName>
        <label>Certification status</label>
        <picklist>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coordinate_delivery_of_HOT_Billing_Ana__c</fullName>
        <label>Coordinate delivery of HOT/BA to test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coordinate_signature_of_ETSP_agreement__c</fullName>
        <label>Coordinate signature of ETSP agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Test_Plan_and_Agree_with_ETSP__c</fullName>
        <inlineHelpText>Coordinator - evidence: Excel sheet attached</inlineHelpText>
        <label>Create Test Plan and Agree with ETSP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Examine_ETSP_test_requirement__c</fullName>
        <inlineHelpText>Coordinator</inlineHelpText>
        <label>Examine test requirement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISOCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>eTSP Certifications</relationshipLabel>
        <relationshipName>eTSP_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inform_DPC_and_provide_test_details__c</fullName>
        <label>Inform DPC and provide test details</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instruc_DPC_to_re_run_test__c</fullName>
        <label>Instruct DPC to re-run test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instruct_DPC_to_Produce_HOT_Billing_anal__c</fullName>
        <label>Instruct DPC to Produce HOT/Billing ana.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_Applicable1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Applicable2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Applicable3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_coding_in_YMQ_to_allocate_design__c</fullName>
        <inlineHelpText>Coordinator</inlineHelpText>
        <label>Request coding in YMQ to allocate design</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_tet_file_for__c</fullName>
        <inlineHelpText>Coordinator</inlineHelpText>
        <label>Request test file from ETSP as per plan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Approve_questionnaire__c</fullName>
        <inlineHelpText>Coordinator</inlineHelpText>
        <label>Ready for signature DPC coordinator</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_questionnaire__c</fullName>
        <inlineHelpText>RPM</inlineHelpText>
        <label>Review questionnaire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_the_error_reports__c</fullName>
        <inlineHelpText>Coordinator</inlineHelpText>
        <label>Review the error reports</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_ApprovedqtoETSP__c</fullName>
        <inlineHelpText>Coordinator - evidence email in case</inlineHelpText>
        <label>Send Approved Questionnaire to ETSP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_questionnaire_to_DPC__c</fullName>
        <inlineHelpText>Coordinator</inlineHelpText>
        <label>Send questionnaire to DPC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_up_project_plan_and_BSP_questionnair__c</fullName>
        <inlineHelpText>Coordinator</inlineHelpText>
        <label>Set up project plan &amp; BSP questionnaire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validate_test_outputs_againts_plan__c</fullName>
        <label>Validate test outputs againts plan</label>
        <type>Date</type>
    </fields>
    <label>eTSP Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>eTSP-{YYYY}{MM}-{0}</displayFormat>
        <label>eTSP Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eTSP Certifications</pluralLabel>
    <recordTypes>
        <fullName>EMD</fullName>
        <active>true</active>
        <label>EMD</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_eTSP_Certification</fullName>
        <active>true</active>
        <label>New eTSP Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>WebLink</fullName>
        <active>true</active>
        <label>WebLink</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>